# 6tlservice

./: .gitignore  .gitmodules
backend/: .env.example  README.md  obsolescencia_prompt.md  pyproject.toml  run_digest.cmd  run_digest.py  run_obsolescencia.cmd  run_obsolescencia.py
backend/app/: alta_equipo.py  analitica_incidencias.py  auditoria.py  auth_service.py  avisos.py  avisos_service.py  ayuda_seed.py  contratos.py  contratos_service.py  crear_usuario.py  db.py  deps.py  derivaciones.py  derivaciones_service.py  email_notify.py  env_file.py  fabricantes.py  fabricantes_email.py  fabricantes_seed.py  garantia.py  garantia_fabricante.py  garantia_fabricante_service.py  geocoding.py  incidencias_service.py  main.py  migrations.py  models.py  notificaciones.py  notificaciones_service.py  obsolescencia.py  obsolescencia_banco.py  obsolescencia_export.py  obsolescencia_jobs.py  obsolescencia_service.py  preventivo_service.py  schemas.py  seguridad.py  sla.py  sla_service.py  solicitudes_service.py  (+1 more)
backend/tests/: conftest.py  test_alta_equipo.py  test_analitica.py  test_analitica_endpoint.py  test_auditoria.py  test_auditoria_endpoint.py  test_auth_router.py  test_auth_service.py  test_avances.py  test_avisos_api.py  test_avisos_logica.py  test_avisos_service.py  test_ayuda_endpoint.py  test_ayuda_model.py  test_ayuda_seed.py  test_busqueda.py  test_clientes.py  test_componentes.py  test_consultar_fabricante.py  test_contratos_api.py  test_contratos_logica.py  test_contratos_modelo.py  test_contratos_schemas.py  test_contratos_service.py  test_crear_usuario.py  (+63 more)
(+108 files in other folders)
